--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,19 @@
   height: 2.5rem;
 }
 
+.cl-userButtonPopoverActionButton {
+  color: white;
+}
+
+.cl-internal-1o11va6 {
+  animation-duration: 500ms;
+}
+
+.cl-internal-1o11va6:hover {
+  background: #0e78f9;
+}
+
+
 /* =============================== */
 
 @layer utilities {
@@ -115,7 +128,11 @@
   }
 
   .home-card {
-    @apply px-4 py-6 flex flex-col justify-between w-full xl:max-w-[270px] min-h-[260px] rounded-lg;
+    @apply px-4 py-6 flex flex-col justify-between w-full xl:max-w-[270px] min-h-[260px] rounded-lg cursor-pointer;
+  }
+
+  .input-class {
+    @apply border-none bg-dark-3 focus-visible:ring-0 focus-visible:ring-offset-0;
   }
 
   .call-btn-style {
