--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,7 +132,7 @@
   }
 
   .input-class {
-    @apply border-none bg-dark-3 focus-visible:ring-0 focus-visible:ring-offset-0;
+    @apply border-none bg-dark-3 focus-visible:ring-0 focus-visible:ring-offset-0 focus:outline-none p-2 rounded-md;
   }
 
   .call-btn-style {
